--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -166,11 +166,146 @@ func numIslands(grid [][]byte) int {
 
 二刷的题目，结果还是要看笔记才能做出来，但是起码好在看了笔记还是能写出正确答案差不多的样子，
 
-111
 
-222
 
-333
+##  695.岛屿的最大面积(bfs, dfs)
+
+dfs:
+
+```cpp
+class Solution {
+public:
+    int maxAreaOfIsland(vector<vector<int>>& grid) {
+        function<int(int, int)> dfs = [&](int i, int j) -> int {
+            if(i < 0 || j < 0 || i >= grid.size() || j >= grid[0].size() || grid[i][j] == 0) return 0;
+            grid[i][j] = 0; //标记已访问
+            int u = dfs(i+1, j), r = dfs(i, j+1), d = dfs(i-1, j), l = dfs(i, j-1);
+            return u+r+d+l+1;
+        };
+
+        int ans = 0;
+        for(int i = 0; i < grid.size(); i++) {
+            for(int j = 0; j < grid[i].size(); j++) {
+                if(grid[i][j] == 1) {
+                    ans = max(ans, dfs(i, j));
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func maxAreaOfIsland(grid [][]int) int {
+    var dfs func(i, j int) int
+    dfs = func(i, j int) int {
+        if i < 0 || j < 0 || i >= len(grid) || j >= len(grid[0]) || grid[i][j] == 0 {
+            return 0;
+        }
+        grid[i][j] = 0
+        u, l, d, r := dfs(i+1, j), dfs(i, j-1), dfs(i-1, j), dfs(i, j+1)
+        return u+l+d+r+1
+    }
+
+    ans := 0
+    for i, row := range grid {
+        for j, x := range row {
+            if x == 1 {
+                ans = max(ans, dfs(i, j))
+            }
+        }
+    }
+    return ans
+}
+```
+
+这个dfs想不出来的原因啊，我感觉是不会分析`子问题`，子问题分析不出来就导致了不知道如何写返回值，最后开始我想写的是u=dfs(i+1,j)+1，r=dfs(i,j+1)+1以此类推，最后返回u+r+d+l，这样答案是不正确的，答案中`return u+r+d+l+1;`指的就是当前位置，这样才不会重复计算。写的过程中还有一个错误，就是边界条件的判断上，`i >= grid.size() || j >= grid[0].size()`一定要有等于号，不然会导致grid[i] [j]下标越界
+
+
+
+bfs:
+
+```cpp
+class Solution {
+public:
+    int maxAreaOfIsland(vector<vector<int>>& grid) {
+        int x[4] = {1, 0, -1, 0};
+        int y[4] = {0, -1, 0, 1};
+        int n = grid.size(), m = grid[0].size();
+        queue<pair<int, int>> q;
+        int ans = 0;
+        for(int i = 0; i < grid.size(); i++) {
+            for(int j = 0; j < grid[0].size(); j++) {
+                int cnt = 0;
+                if(grid[i][j] == 1) {
+                    q.push({i, j});
+                    cnt++;
+                    grid[i][j] = 0;
+                    while(!q.empty()) {
+                        auto t = q.front();
+                        q.pop();
+                        for(int k = 0; k < 4; k++) {
+                            int tx = t.first+x[k], ty = t.second+y[k];
+                            if(tx >= 0 && tx < n && ty >= 0 && ty < m && grid[tx][ty] == 1) {
+                                q.push({tx, ty});
+                                grid[tx][ty] = 0;
+                                cnt++;
+                            }
+                        }
+                    }
+                }
+                ans = max(ans, cnt);
+            }
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func maxAreaOfIsland(grid [][]int) int {
+    x := []int{1, 0, -1, 0}
+    y := []int{0, -1, 0, 1}
+    q := [][2]int{}
+    ans := 0
+    n, m := len(grid), len(grid[0])
+    for i, row := range grid {
+        for j, val := range row {
+            cnt := 0
+            if val == 1 {
+                q = append(q, [2]int{i, j})
+                grid[i][j] = 0
+                cnt++
+                for len(q) > 0 {
+                    t := q[0]
+                    q = q[1:]
+                    for k :=  0; k < 4; k++ {
+                        tx, ty := t[0]+x[k], t[1]+y[k]
+                        if tx >= 0 && tx < n && ty >= 0 && ty < m && grid[tx][ty] == 1 {
+                            q = append(q, [2]int{tx, ty})
+                            grid[tx][ty] = 0
+                            cnt++
+                        } 
+                    }
+                }
+            }
+            ans = max(ans, cnt)
+        }
+    }
+    return ans
+}
+```
+
+
+
+
+
+
 
 
 
@@ -200,3 +335,8 @@ for(auto ... : ...) {
 }
 ```
 
+
+
+###  网格dfs、bfs
+
+大多数情况下两种方法都能解决，dfs代码看上去相对简洁一点，但是理解起来比较费劲，着重考虑子问题是否分析正确。在遇到这类问题的时候容易出现的几个错误：1、边界出错导致数组越界。2、没有更新已访问节点导致死循环。3、注意题干中所给的网格大小，通常在1000以内还是能够解决的不会超时
