力扣周赛、双周赛，牛客周赛

--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -397,11 +397,194 @@ func countKConstraintSubstrings(s string, k int) int {
 
 
 
+###  双周赛138
+
+####  求出数字答案(模拟)
+
+```cpp
+class Solution {
+public:
+    int generateKey(int num1, int num2, int num3) {
+        int ans = 0;
+        for(int bit = 1; num1&&num2&&num3; bit *= 10) {
+            ans += min({num1%10, num2%10, num3%10})*bit;
+            num1 /= 10;
+            num2 /= 10;
+            num3 /= 10;
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func generateKey(num1 int, num2 int, num3 int) int {
+    ans := 0
+    for bit := 1; num1 > 0 && num2 > 0 && num3 > 0; bit *= 10 {
+        ans += min(num1%10, num2%10, num3%10)*bit
+        num1 /= 10
+        num2 /= 10
+        num3 /= 10
+    }
+    return ans
+}
+```
+
+这一题cpp学到了min的新写法，当多个元素使用min的时候就不需要再嵌套min了，嵌套min看起来很丑，这样以集合的形式展现出来看上去很舒服
+
+
+
+####  哈希分割字符串(模拟)
+
+```cpp
+class Solution {
+public:
+    string stringHash(string s, int k) {
+        string ans = "";
+        for(int i = 0; i < s.size(); i+=k) {
+            int t = 0;
+            for(int j = i; j < k+i; j++) {
+                t += s[j]-'a';
+            }
+            cout << t;
+            ans.push_back('a'+t%26);
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func stringHash(s string, k int) string {
+    n := len(s)
+    ans := make([]byte, n/k)
+    for i := 0; i < n; i += k {
+        sum := 0
+        for _, x := range s[i:i+k] {
+            sum += int(x-'a')
+        }
+        ans[i/k] = 'a'+byte(sum%26)
+    }
+    return string(ans)
+}
+```
+
+写完和灵神有同样的感觉，这和简单题有什么区别。go语言这里要提一嘴，这里二层循环是只遍历了字符串的一部分，所以用到了s的切片
 
 
 
 
 
+###  周赛413
+
+####  检查棋盘方格颜色是否相同
+
+```cpp
+/*
+英文字母和数字对应ascii值
+奇偶性相同  <==> 对应坐标是黑色
+奇偶性不同 <==> 对应坐标是白色
+
+奇偶性相同两数相加为偶数
+奇偶性不同两数相加为奇数
+*/
+
+class Solution {
+public:
+    bool checkTwoChessboards(string c1, string c2) {
+        return ((c1[0]^c1[1])&1) == ((c2[0]^c2[1])&1);
+    }
+};
+```
+
+
+
+```go
+func checkTwoChessboards(c1 string, c2 string) bool {
+    return ((c1[0]^c1[1])&1) == ((c2[0]^c2[1])&1)
+}
+```
+
+比赛的时候直接用二维数组模拟出了这个棋盘然后直接判断的，虽然方法很蠢，主要是当时实在是不想浪费时间去找规律。为什么能用异或运算来代替这个加法呢？是这样的，两个奇偶性相同的数相加所得到的二进制数最低位就是两个数相异或，这个就自己举个例子想一想就行了，&1就是求最低位的奇偶性。
+
+
+
+####  第k近障碍物查询(优先队列)
+
+```cpp
+class Solution {
+public:
+    vector<int> resultsArray(vector<vector<int>>& queries, int k) {
+        vector<int> ans;
+        priority_queue<int> pq;
+        for(auto q :queries) {
+            pq.push(abs(q[0])+abs(q[1]));
+            if(pq.size() > k) pq.pop();
+            if(pq.size() == k) ans.push_back(pq.top());
+            else ans.push_back(-1);
+        }
+        return ans;
+    }
+};
+```
+
+写的时候就是感觉有点熟悉，好像就是堆的一个经典题目，好在还是花时间写出来了，当时循环体内的if逻辑卡了比较久，导致wa了一发，提交的时间也比较慢，这是这一题唯一的不足地方。其次就是要想到用大根堆而不是小根堆，因为每一次要剔除的是最大的数，如果用小根堆就删除的不是堆顶元素了，堆顶元素是最大值就是用大根堆这一数据结构
+
+
+
+####  选择矩阵中单元格的最大得分(记忆化搜索)
+
+```cpp
+class Solution {
+public:
+    int maxScore(vector<vector<int>>& grid) {
+        unordered_map<int, int> pos;    //grid[i][j]到行号的映射，压缩成二进制数存储
+        int m = grid.size();
+        for(int i = 0; i < m; i++) {
+            for(int x : grid[i]) {
+                //保存所有包含x的行号（压缩成二进制数）
+                pos[x] |= 1 << i;
+            }
+        }
+
+        vector<int> all_nums;
+        //取出所有的键值x，这里的x经过unordered_map存储后就是不重复的了 然后加入到all_nums数组中
+        for(auto& [x, _] : pos) {
+            all_nums.push_back(x);
+        }
+
+        //记忆化搜索
+        int n = all_nums.size();
+        vector<vector<int>> memo(n, vector<int>(1 << m, -1));   //-1表示没有计算过
+
+        //dfs(dfs, i, j)表示在 [0,i] 中选数字，所选数字所处的行号不能在集合 j 中，每行至多一个数且没有相同元素时，所选元素之和的最大值。
+        auto dfs = [&](auto&& dfs, int i, int j) -> int {
+            if(i < 0) return 0;
+            int& res = memo[i][j];  //注意这里是引用
+            if(res != -1) return res;
+
+            //不选x
+            res = dfs(dfs, i-1, j);
+            //枚举选第k行的x
+            int x = all_nums[i];
+            for(int t = pos[x], lb; t; t ^= lb) {
+                lb = t&-t;  //lb=1<<k,其中k是行号 lb是lowbit t&-t代表取出t二进制表示的最低位1
+                if((j&lb) == 0) {
+                    res = max(res, dfs(dfs, i-1, j|lb)+x);
+                }
+            }
+            return res;
+        };
+        return dfs(dfs, n-1, 0);
+    }
+};
+```
+
+这一道困难题接触到了很多新东西！记忆化搜索掌握程度还是欠佳，紧紧只能写完res的部分，后面的部分主要是对`选或不选`和`选哪个`的使用场景不熟悉和分析子问题的能力。当然这一题转化问题的思维也是很重要的，如果是选哪个的方法话状态会十分多，以至于会爆内存，换个角度思考问题，将状态压缩从值域的角度上去考虑状态，内存上的问题就解决了。这里的哈希表pos就是用来记录val的行信息的，记录的方式将其压缩成二进制的方式，即第i行的信息就放到了二进制数的第i位。然后遍历这个pos哈希表来初始化all_nums数组，这样的好处是既让数组元素升序又达到了去重的操作.最后就是dfs(i,j)的定义十分关键，dfs的详细内容再函数体内注释了
 
 
 
@@ -705,3 +888,90 @@ signed main()
 ```
 
 自己写的时候有两种思路，一种是字符串模拟栈，但是想着这样写挺麻烦的，最后想到了一个先不管前面的1，然后记录0和1的个数的方法，但是只能通过85%，问题就在于可能会出现"10"的情况，其实也算是一个贪心思路。但是看了题解的贪心思路才是妙，它的方法解决了"10"的情况，也就是对应的elseif那一行
+
+
+
+
+
+###  周赛58
+
+####  B.能做到的吧
+
+```cpp
+void solve(){
+	string x;
+	cin >> x;
+	for(int i = 0; i < x.size()-1; i++) {
+		if(x[i] < x[i+1]) {
+			cout << "YES" << endl;
+			return;
+		}
+	}
+	cout << "NO" << endl;
+}
+```
+
+观察示例，这种yes和no的题型就只要找出一个特例就行了，这里的特例就是只要这个数组不是严格递减的，那么都能符合题意(yes)，如果遍历完一遍数组发现是严格递减的话那么最后输出no就行了
+
+
+
+####  C.会赢的！
+
+```cpp
+void solve(){
+	int x, y;
+	cin >> x >> y;
+	if(x < 0 || y < 0 || abs(x-y) > 1) {
+		cout << "PING" << endl;
+		return;
+	}
+	
+	if((x+y)&1) cout << "YES" << endl;
+	else cout << "NO" << endl;
+}
+```
+
+题目中很明显的给出了一个贪心的思路：` 尽可能让自己赢，自己赢不了则尽可能平局 `然后根据坐标和的奇偶性、差的绝对值来判断三个答案情况
+
+
+
+####  D.好好好数
+
+```cpp
+void solve(){
+	ll n, k;
+	cin >> n >> k;
+	if(k == 1) {
+		cout << "1\n";
+		return;
+	}
+	ll ans = 0, tmp = 1;
+	while(tmp <= n/k) tmp *= k;    //以免溢出
+	while(n) {
+		ans = max(ans, n/tmp);    //不断取出系数
+		n %= tmp;
+		tmp /= k;
+	}
+	cout << ans << endl;
+}
+```
+
+这一题呢感觉主要是考在思维上了，举个例子`n=3*4^3+4*4^4+4^5`，那么最终返回的答案就是4，也就是这些幂中的系数最大值，这就是将问题转化的思路。然后就是实现上，k=1的时候需要特判，k=1卡了很多分。然后就是tmp <= n/k，是避免溢出操作。
+
+
+
+####  E.好好好数组
+
+```cpp
+void solve(){
+	int n, m;
+	cin >> n >> m;
+	if(m == 1) cout << n+1 << endl;
+	else if(m == 2) cout << n << endl;
+	else if(m == 3) cout << "1\n";
+	else cout << "0\n"; 
+}
+```
+
+很复杂的证明过程，然后很简单的代码，这谁想得到啊。。。
+
