--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -644,6 +644,39 @@ public:
 
 
 
+##  1034.边界着色(dfs)
+
+```cpp
+class Solution {
+public:
+    vector<vector<int>> colorBorder(vector<vector<int>>& grid, int row, int col, int color) {
+        int n = grid.size(), m = grid[0].size();
+        int dirs[][2] = {{-1, 0}, {0, -1}, {1, 0}, {0, 1}};  //代表上左下右
+        vector<vector<bool>> vis(n, vector<bool>(m, false));
+        function<void(int, int, int)> dfs = [&](int i, int j, int val) {
+            vis[i][j] = true;
+            for(auto dir : dirs) {
+                int dx = i+dir[0], dy = j+dir[1];
+                if(dx >= 0 && dx < n && dy >= 0 && dy < m) {
+                    if(vis[dx][dy] == true) continue;
+                    //把这个理解成递归进入的入口
+                    if(grid[dx][dy] == val) dfs(dx, dy, val);
+                    else grid[i][j] = color;	//不是grid[dx][dy]=color
+                } else {
+                    grid[i][j] = color;
+                }
+            }
+        };
+        dfs(row, col, grid[row][col]);
+        return grid;
+    }
+};
+```
+
+昨天感觉学的还不错，今天就来了个当头一棒，写的代码又臭又长，还不能过全部样例，这一个题解还出现了新的东西，就是表示这四个方向，在这里就必须要这样枚举四个方向了，而不能单纯的dfs(i+1,j)这样了，相比以前这一题的限定就更多了，所以只能枚举四个方向单独进行判断
+
+
+
 
 
 
