--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -677,6 +677,76 @@ public:
 
 
 
+##  1020.飞地的数量(dfs)
+
+```cpp
+class Solution {
+public:
+    int numEnclaves(vector<vector<int>>& grid) {
+        int n = grid.size(), m = grid[0].size();
+        int dirs[][2] = {{-1, 0}, {0, -1}, {1, 0}, {0, 1}};
+        int ans = 0;
+        function<void(int, int)> dfs = [&](int i, int j) {
+            grid[i][j] = 0;
+            ans++;
+            for(auto dir : dirs) {
+                int dx = i+dir[0], dy = j+dir[1];
+                if(dx < 0 || dy < 0 || dx >= n || dy >= m || grid[dx][dy] == 0) continue;
+                dfs(dx, dy);
+            }
+            return;
+        };
+
+        for(int i = 0; i < n; i++) {
+            if(grid[i][0] == 1) dfs(i, 0);
+            if(grid[i][m-1] == 1) dfs(i, m-1);
+        }
+        for(int j = 0; j < m; j++) {
+            if(grid[0][j] == 1) dfs(0, j);
+            if(grid[n-1][j] == 1) dfs(n-1, j);
+        }
+        ans = 0;
+        for(int i = 0; i < n; i++) {
+            for(int j = 0; j < m; j++) {
+                if(grid[i][j] == 1) dfs(i, j);
+            }
+        }
+        return ans;
+    }
+};
+```
+
+主要问题在于不知道怎么解决我真的服了。。。还是多练习吧，主要思路是先将上下左右边界遍历一遍，当遇到1的时候就将所在连通分量全部变为0，这样就不会算在计数里面了，由于dfs函数体内对ans进行了修改，所以最后在找无法离开的陆地格子的时候就先要将ans清0即可
+
+
+
+##  2684.矩阵中移动的最大次数(dfs)
+
+```cpp
+class Solution {
+public:
+    int maxMoves(vector<vector<int>>& grid) {
+        int ans = 0, n = grid.size(), m = grid[0].size();
+        int dirs[][2] = {{-1, 1}, {0, 1}, {1, 1}};
+        function<void(int, int)> dfs = [&](int i, int j) {
+            ans = max(ans, j);  //更新答案 这里的答案就是最远的列下标
+            if(ans == m-1) return;
+            for(auto dir : dirs) {
+                int dx = i+dir[0], dy = j+dir[1];
+                if(dx >= 0 && dx < n && dy >= 0 && dy < m && grid[i][j] < grid[dx][dy]) dfs(dx, dy);
+            }
+            grid[i][j] = 0;
+        };
+        for(int i = 0; i < n; i++) dfs(i, 0);
+        return ans;
+    }
+};
+```
+
+好烦啊，怎么就是写不出来，就是搞不清楚什么时候dfs要有返回值，什么时候可以不需要有返回值
+
+
+
 
 
 
