--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -749,6 +749,357 @@ public:
 
 
 
+##  1254.统计封闭岛屿的数目(dfs)
+
+```cpp
+class Solution {
+public:
+    int closedIsland(vector<vector<int>>& grid) {
+        int ans = 0, n = grid.size(), m = grid[0].size();
+        auto dfs = [&](auto&& dfs, int i, int j) {
+            if(i < 0 || j < 0 || i >= n || j >= m || grid[i][j] == 1) return;
+            grid[i][j] = 1;
+            dfs(dfs, i-1, j);
+            dfs(dfs, i, j-1);
+            dfs(dfs, i+1, j);
+            dfs(dfs, i, j+1);
+        };
+
+        for(int i = 0; i < n; i++) {
+            int step = i == 0 || i == n-1 ? 1 : m-1;
+            for(int j = 0; j < m; j += step) {
+                dfs(dfs, i, j);
+            }
+        }
+
+        for(int i = 0; i < n; i++) {
+            for(int j = 0; j < m; j++) {
+                if(grid[i][j] == 0) {
+                    ans++;
+                    dfs(dfs, i, j);
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
+
+
+```go
+func closedIsland(grid [][]int) int {
+    ans, n, m := 0, len(grid), len(grid[0])
+    var dfs func(i, j int)
+    dfs = func(i, j int) {
+        if i < 0 || j < 0 || i >= n || j >= m || grid[i][j] == 1 {
+            return
+        }
+        grid[i][j] = 1
+        dfs(i-1, j)
+        dfs(i, j-1)
+        dfs(i+1, j)
+        dfs(i, j+1)
+    }
+
+    for i := range grid {
+        step := 1
+        if i > 0 && i < n-1 {
+            step = m-1
+        }
+        for j := 0; j < m; j += step {
+            dfs(i, j)
+        }
+    }
+
+    for i, row := range grid {
+        for j, val := range row {
+            if val == 0 {
+                ans++
+                dfs(i, j)
+            }
+        }
+    }
+    return ans
+}
+```
+
+主要难点在于用什么算法能够实现题中的意思，这一题用的解法是：考虑到在网格边界的土地一定不是封闭岛屿，所以先dfs边界上的0，将他们变为1，然后再遍历非边界的0的联通分量，这个联通分量一定是符合封闭岛屿的。
+
+
+
+##  130.被围绕的区域(dfs)
+
+```cpp
+class Solution {
+public:
+    void solve(vector<vector<char>>& board) {
+        int n = board.size(), m = board[0].size();
+        if(n == 0) return;
+        auto dfs = [&](auto&& dfs, int i, int j) {
+            if(i < 0 || j < 0 || i >= n || j >= m || board[i][j] != 'O') return;
+            board[i][j] = 'A';
+            dfs(dfs, i-1, j);
+            dfs(dfs, i, j-1);
+            dfs(dfs, i+1, j);
+            dfs(dfs, i, j+1);
+        };
+
+        for(int i = 0; i < n; i++) {
+            int step = i == 0 || i == n-1 ? 1 : m-1;
+            for(int j = 0; j < m; j += step) {
+                dfs(dfs, i, j);
+            }
+        }
+
+        for(int i = 0; i < n; i++) {
+            for(int j = 0; j < m; j++) {
+                if(board[i][j] == 'A') board[i][j] = 'O';
+                else if(board[i][j] == 'O') board[i][j] = 'X';
+            }
+        }
+        return;
+    }
+};
+```
+
+
+
+```go
+func solve(board [][]byte)  {
+    var dfs func(i, j int)
+    n, m := len(board), len(board[0])
+    dfs = func(i, j int) {
+        if i < 0 || j < 0 || i >= n || j >= m || board[i][j] != 'O' {
+            return
+        }
+        board[i][j] = 'A';
+        dfs(i-1, j)
+        dfs(i, j-1)
+        dfs(i+1, j)
+        dfs(i, j+1)
+    }
+
+    for i := range board {
+        step := 1
+        if i > 0 && i < n-1 {
+            step = m-1
+        }
+        for j := 0; j < m; j += step {
+            dfs(i, j)
+        }
+    }
+
+    for i, row := range board {
+        for j, val := range row {
+            if val == 'A' {
+                board[i][j] = 'O'
+            } else if val == 'O' {
+                board[i][j] = 'X'
+            }
+        }
+    }
+}
+```
+
+这个题和上一题还是很像的，也是想到了，就是先dfs边界条件，但是但是，感觉思维被上个题完全带走了，就想着dfs了边界后还要dfs里面的，其实并不需要啊，只需要遍历一遍这个board就行了。。。然后将相应元素替换掉就行了，啊啊啊啊啊感觉智商被践踏了。还有就是这个大写的O和0，我真的服了。。。
+
+
+
+
+
+##  542.01矩阵(bfs)
+
+```cpp
+class Solution {
+public:
+    vector<vector<int>> updateMatrix(vector<vector<int>>& mat) {
+        int dirs[][2] = {{-1, 0}, {0, -1}, {1, 0}, {0, 1}};
+        queue<pair<int, int>> q;
+        int n = mat.size(), m = mat[0].size();
+        vector<vector<bool>> vis(n, vector<bool>(m, false));
+        for(int i = 0; i < n; i++) {
+            for(int j = 0; j < m; j++) {
+                if(mat[i][j] == 0) {
+                    vis[i][j] = true;
+                    q.push({i, j});
+                }
+            }
+        }
+
+        vector<vector<int>> dist(n, vector<int>(m, 0));
+        while(!q.empty()) {
+            auto t = q.front();
+            q.pop();
+            for(auto dir : dirs) {
+                int dx = t.first+dir[0], dy = t.second+dir[1];
+                if(dx >= 0 && dx < n && dy >= 0 && dy < m && !vis[dx][dy]) {
+                    dist[dx][dy] = dist[t.first][t.second]+1;
+                    q.push({dx, dy});
+                    vis[dx][dy] = true;
+                }
+            }
+        }
+        return dist;
+    }
+};
+```
+
+很明显了，这一题题干就是给出的求对应元素到0的最近距离，自己想好像真的不好想，主要是这个多元素困扰到了，这里题解给的方法是将所有`0`看成一个整体，也就是所说的超级0，前面两层for循环就是做的这个事情，与以往不同的是，这里需要定义一个vis数组来表示是否访问过，以前岛屿那种题型就是在数组原地修改来达到已经访问的意思，这里需要额外定义一个空间来记录，当然对于岛屿题目也可以自己定义一个vis数组，只不过就是内存消耗大了一点点，其余其实没有什么问题
+
+
+
+##  994.腐烂的橘子(bfs)
+
+```cpp
+class Solution {
+public:
+    int orangesRotting(vector<vector<int>>& grid) {
+        int n = grid.size(), m = grid[0].size();
+        vector<vector<bool>> vis(n, vector<bool>(m, false));
+        vector<vector<int>> dist(n, vector<int>(m, 0));
+        queue<pair<int, int>> q;
+        for(int i = 0; i < n; i++) {
+            for(int j = 0; j < m; j++) {
+                if(grid[i][j] == 2) {
+                    q.push({i, j});
+                    vis[i][j] = true;
+                }
+            }
+        }
+
+        int dirs[][2] = {{-1, 0}, {0, -1}, {1, 0}, {0, 1}};
+        while(!q.empty()) {
+            auto t = q.front();
+            q.pop();
+            for(auto dir : dirs) {
+                int dx = t.first+dir[0], dy = t.second+dir[1];
+                if(dx >= 0 && dx < n && dy >= 0 && dy < m && grid[dx][dy] == 1 && !vis[dx][dy]) {
+                    vis[dx][dy] = true;
+                    dist[dx][dy] = dist[t.first][t.second]+1;
+                    q.push({dx, dy});
+                }
+            }
+        }
+
+        int ans = 0;
+        for(int i = 0; i < n; i++) {
+            for(int j = 0; j < m; j++) {
+                if(!vis[i][j] && grid[i][j] == 1) return  -1;
+                ans = max(ans, dist[i][j]);
+            }
+        }
+        return ans;
+    }
+};
+```
+
+自己独立顺利ac了，主要是学的上一题的01矩阵的官解方法，虽然代码冗长了一点，但是整体写的思路还是很流畅的，现在发现了bfs相对dfs要好写一点，虽然长是长了点，但是这种思路畅通的感觉就是爽一点
+
+
+
+
+
+##  2684.矩阵中移动的最大次数(bfs)
+
+```cpp
+class Solution {
+public:
+    int maxMoves(vector<vector<int>>& grid) {
+        int m = grid.size(), n = grid[0].size();
+        vector<int> vis(m, -1), q(m);
+        iota(q.begin(), q.end(), 0);
+        for(int j = 0; j < n-1; j++) {
+            vector<int> nxt;
+            for(auto i : q) {
+                for(int k = max(i-1, 0); k < min(m, i+2); k++) {
+                    if(vis[k] != j && grid[k][j+1] > grid[i][j]) {
+                        vis[k] = j;
+                        nxt.push_back(k);
+                    }
+                }
+            }
+            if(nxt.empty()) return j;
+            q = move(nxt);
+        }
+        return n-1;
+    }
+};
+```
+
+这个是用的双数组的写法，和之前的dfs一样都有点看不懂，主要是灵神的方法和以往不一样，又是先遍历列，初始化都是第一列的元素，感觉遍历方式只要打破常规就感觉不是很好理解了
+
+
+
+##  1926.迷宫中离入口最近的出口(bfs)
+
+```cpp
+class Solution {
+public:
+    int nearestExit(vector<vector<char>>& maze, vector<int>& entrance) {
+        int m = maze.size(), n = maze[0].size();
+        int dirs[][2] = {{-1, 0}, {0, -1}, {1, 0}, {0, 1}};
+        queue<array<int, 3>> q;
+        q.push({entrance[0], entrance[1], 0});
+        maze[entrance[0]][entrance[1]] = '+';
+        while(!q.empty()) {
+            auto t = q.front();
+            q.pop();
+            for(auto dir : dirs) {
+                int dx = t[0]+dir[0], dy = t[1]+dir[1];
+                if(dx >= 0 && dx < m && dy >= 0 && dy < n && maze[dx][dy] == '.') {
+                    if(dx == 0 || dy == 0 || dx == m-1 || dy == n-1) return t[2]+1;
+                    q.push({dx, dy, t[2]+1});
+                    maze[dx][dy] = '+';
+                }
+            }
+        }
+        return -1;
+    }
+};
+```
+
+属于是给前两题整魔怔了，我还以刚刚的多源bfs来写，写道一半后发现这个起始点不就只有一个吗？啊？那我为什么要写多源的bfs啊，感觉这个题要比多源的bfs要简单一点，就是直接从起始点出发去找最近的一个边界，想是想到了，但是怎么维护这个补数就困扰到我了，所以在这个地方我不知道怎么写，看了官解之后原来就就是将每一个入队的元素多维护一个距离，这就是为什么队列q要定义成`queue<array<int, 3>> q;`
+
+
+
+```cpp
+class Solution {
+public:
+    int nearestExit(vector<vector<char>>& maze, vector<int>& entrance) {
+        int m = maze.size(), n = maze[0].size();
+        int dirs[][2] = {{-1, 0}, {0, -1}, {1, 0}, {0, 1}};
+        queue<pair<int, int>> q;
+        q.push({entrance[0], entrance[1]});
+        maze[entrance[0]][entrance[1]] = '+';
+        int ans = 0;
+        while(!q.empty()) {
+            int sz = q.size();
+            //一层一层的遍历
+            for(int k = 0; k < sz; k++) {
+                auto t = q.front();
+                q.pop();
+                for(auto dir : dirs) {
+                    int dx = t.first+dir[0], dy = t.second+dir[1];
+                    if(dx >= 0 && dx < m && dy >= 0 && dy < n) {
+                        if(maze[dx][dy] == '.') {
+                            q.push({dx, dy});
+                            maze[dx][dy] = '+';
+                        }
+                    } else if(t.first != entrance[0] || t.second != entrance[1]) {
+                        return ans;
+                    }
+                }
+            }
+
+            ans++;
+        }
+        return -1;
+    }
+};
+```
+
+这是题解区中的另外一个bfs，这个也挺妙的，就是相当于以那个出发点做出一个层序遍历，最后返回的那个值就是层序遍历的最小层数，然后我就按照它那样改，改到后面发现怎么跑都不对，然后仔细发现原来是还要套一层for循环，这个for循环也挺好理解，就是一层一层的遍历这个队列q，然后每次遍历一遍就将ans++，这也是个好方法啊！
+
 
 
 
@@ -784,6 +1135,8 @@ for(auto ... : ...) {
 ###  网格dfs、bfs
 
 大多数情况下两种方法都能解决，dfs代码看上去相对简洁一点，但是理解起来比较费劲，着重考虑子问题是否分析正确。在遇到这类问题的时候容易出现的几个错误：1、边界出错导致数组越界。2、没有更新已访问节点导致死循环。3、注意题干中所给的网格大小，通常在1000以内还是能够解决的不会超时
+
+什么时候用dfs，什么时候用bfs呢？这两种方法其实在大部分情况看来两种都是能用用的方法，主流来说连通块问题用dfs，求最短路径用bfs
 
 
 
