--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -907,7 +907,7 @@ func solve(board [][]byte)  {
 
 
 
-##  542.01矩阵(bfs)
+##  542.01矩阵(多源bfs)
 
 ```cpp
 class Solution {
@@ -948,7 +948,7 @@ public:
 
 
 
-##  994.腐烂的橘子(bfs)
+##  994.腐烂的橘子(多源bfs)
 
 ```cpp
 class Solution {
@@ -1099,6 +1099,122 @@ public:
 ```
 
 这是题解区中的另外一个bfs，这个也挺妙的，就是相当于以那个出发点做出一个层序遍历，最后返回的那个值就是层序遍历的最小层数，然后我就按照它那样改，改到后面发现怎么跑都不对，然后仔细发现原来是还要套一层for循环，这个for循环也挺好理解，就是一层一层的遍历这个队列q，然后每次遍历一遍就将ans++，这也是个好方法啊！
+
+
+
+##  2181.合并零之间的节点(链表)
+
+```cpp
+class Solution {
+public:
+    ListNode* mergeNodes(ListNode* head) {
+        ListNode* tail = head;
+        for(ListNode* cur = head->next; cur->next; cur = cur->next) {
+            if(cur->val) tail->val += cur->val;
+            else {
+                tail = tail->next;
+                tail->val = 0;
+            }
+        }
+        tail->next = nullptr;
+        return head;
+    }
+};
+```
+
+
+
+```go
+func mergeNodes(head *ListNode) *ListNode {
+    tail := head
+    for cur := head.Next; cur.Next != nil; cur = cur.Next {
+        if cur.Val != 0 {
+            tail.Val += cur.Val
+        } else {
+            tail = tail.Next
+            tail.Val = 0
+        }
+    }
+    tail.Next = nil
+    return head
+}
+```
+
+也是很久没有刷过链表的题目了，至少是不会写出报错的代码哈哈哈还是知足了，但是自己写的不知道为啥返回的空数据，看了灵神的题解还是舒服啊，直接在链表原地修改，整体的思想就是在所有val节点和都放到了tail所指的节点上了，这个tail指针一定是在cur指针之前的，所以可以直接修改tail的值
+
+
+
+##  1091.二进制矩阵中的最短路径(bfs)
+
+```cpp
+class Solution {
+public:
+    int shortestPathBinaryMatrix(vector<vector<int>>& grid) {
+        queue<array<int, 3>> q;
+        int n = grid.size();
+        if(grid[0][0] != 0) return -1;
+        q.push({0, 0, 1});
+        while(!q.empty()) {
+            auto t = q.front();
+            q.pop();
+            for(int i = -1; i <= 1; i++) {
+                for(int j = -1; j <= 1; j++) {
+                    if(i == 0 && j == 0) continue;
+                    int dx = i+t[0], dy = j+t[1];
+                    if(dx >= 0 && dx < n && dy >= 0 && dy < n && grid[dx][dy] == 0) {
+                        if(dx == n-1 && dy == n-1) return t[2]+1;
+                        q.push({dx, dy, t[2]+1});
+                        grid[dx][dy] = 1;
+                    }
+                }
+            }
+        }
+        return n == 1 ? 1 : -1;
+    }
+};
+```
+
+这个题和1926其实如出一辙，甚至感觉比1926要简单一点
+
+
+
+##  1765.地图中的最高点(多源bfs)
+
+```cpp
+class Solution {
+public:
+    vector<vector<int>> highestPeak(vector<vector<int>>& isWater) {
+        int m = isWater.size(), n = isWater[0].size();
+        int dirs[][2] = {{-1, 0}, {0, -1}, {1, 0}, {0, 1}};
+        vector<vector<int>> ans(m, vector<int>(n, 0));
+        queue<array<int, 2>> q;
+        for(int i = 0; i < m; i++) {
+            for(int j  = 0; j < n; j++) {
+                if(isWater[i][j] == 1) {
+                    isWater[i][j] = 2;
+                    q.push({i, j});
+                }
+            }
+        }
+
+        while(!q.empty()) {
+            auto t = q.front();
+            q.pop();
+            for(auto dir : dirs) {
+                int dx = t[0]+dir[0], dy = t[1]+dir[1];
+                if(dx >= 0 && dx < m && dy >= 0 && dy < n && isWater[dx][dy] == 0) {
+                    q.push({dx, dy});
+                    ans[dx][dy] = ans[t[0]][t[1]]+1;
+                    isWater[dx][dy] = 2;
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
+
+这种容易把什么看成多源点的多源bfs还是会做了，就像这一题一样，很明显就是要将这个水域的格子看成一个超级源点，然后将这些源点依次bfs，bfs的过程中维护ans二维数组即可
 
 
 
