--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -588,7 +588,60 @@ public:
 
 
 
+###  周赛414
 
+####  将日期转换为二进制表示(模拟)
+
+```cpp
+class Solution {
+public:
+    string convertDateToBinary(string date) {
+        auto trans = [&](int x) {
+            string res = "";
+            for(; x; x >>= 1) res.push_back((x&1)+'0');
+            reverse(res.begin(), res.end());
+            return res;
+        };
+        return trans(stoi(date.substr(0, 4))) + '-' + trans(stoi(date.substr(5, 2))) + '-' + trans(stoi(date.substr(8, 2)));
+    }
+};
+```
+
+唉，考到了最不愿意写类型的题了，这一道简单题花了我15分钟，感觉就是对字符串的操作、一些库函数了解的不是很到位，题解是直接写了一个函数来做到转化的效果，确实比赛写的时候和这个思路基本一致，但是一对比起来自己的代码真就是屎山代码，其实都是用过的函数，就是时间久了比较生疏了。`字符串反转函数reverse(s.begin(), s.end())`，`将字符串转化成数字函数（可以顺便去掉前导0）stoi("0123")`，`字符串截取函数，截取的是字符串的一个子串s.substr(i, j)，表示从下标i开始截取j个字符`
+
+
+
+####  到达数组末尾的最大得分(贪心、脑筋急转弯、枚举右维护左)
+
+```cpp
+class Solution {
+public:
+    long long findMaximumScore(vector<int>& nums) {
+        long long ans = 0;
+        int mx = 0;
+        for(int i = 0; i+1 < nums.size(); i++) {
+            mx = max(mx, nums[i]);
+            ans += mx;
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func findMaximumScore(nums []int) (ans int64) {
+    mx := 0
+    for _, val := range nums[:len(nums)-1] {
+        mx = max(mx, val)
+        ans += int64(mx)
+    }
+    return ans
+}
+```
+
+属于是智商被完全碾压了。。。比赛的时候用的记忆化搜索，当然看到数据范围一看就是不能过，只不过还是写了一下，好歹过了600样例，大概率是写对了，也是自己独立写出来了一次记忆化搜索吧，还是有点收获的！这一题主要是观察` (j - i) * nums[i] `，正如灵神所说的，看到乘法可以去联想到矩阵，或者可以想象成j-i个nums[i]相加，放到代码中就是遇到一个比mx大的就更新mx，解题方法就类似于了枚举右维护左，我的妈啊！
 
 
 
@@ -975,3 +1028,117 @@ void solve(){
 
 很复杂的证明过程，然后很简单的代码，这谁想得到啊。。。
 
+
+
+###  小白月赛100
+
+####  A
+
+```cpp
+void solve(){
+	auto check = [&](vector<ll> a) -> bool {
+		sort(a.begin(), a.end());
+		return a[0]+a[1] > a[2];
+	};
+	ll a, b, c;
+	cin >> a >> b >> c;
+	if(check({2*a, b, c}) || check({a, 2*b, c}) || check({a, b, 2*c})) cout << "Yes";
+	else cout << "No";
+}
+```
+
+比赛的时候写的很复杂很屎，特意看看题解咋写的，搞得我都wa了一发。。。要点还是在两边之和大于第三边，这里的check函数用的是lambda表达式的写法
+
+
+
+####  C
+
+```cpp
+void solve(){
+	int n;
+	cin >> n;
+	if(n == 1) {
+		cout << -1;
+		return;
+	}
+	ll a[n], b[n];
+	unordered_map<ll, int> cnt;
+	for(int i = 0; i < n; i++) cin >> a[i];
+	for(int i = 0; i < n; i++) {
+		cin >> b[i];
+		cnt[b[i]]++;
+	}
+	int ans = 0;
+	for(auto [_, c] : cnt) {
+		if(c == 1) {
+			cout << -1;
+			return;
+		}
+		ans += (c+1)/2;
+	}
+	cout << ans;
+}
+```
+
+钩子的忘了dev不能用解构的写法。。。比赛的时候浪费了我一点时间，思路和题解完全正确~
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+##  蓝桥
+
+###  双周赛18
+
+####  3.村长分钱(求因子)
+
+```cpp
+void solve(){
+	int n, k;
+	cin >> n >> k;
+	int x = n-k, ans = 0;
+	for(int i = 1; i*i <= x; i++) {
+		if(x%i == 0) {
+			if(i > k) ans++;
+			if(x/i > k) ans++;
+ 		}
+	}
+	cout << ans;
+}
+```
+
+诶哟其实比赛的时候还是想到了，只不过想错数字了，我想的是n的因子，其实是n-k的因子，我真的蠢啊，怎么没写出来啊啊啊啊
+
+
+
+####  4.情报传递2
+
+```cpp
+void solve(){
+	ll a, b, c;
+	cin >> a >> b >> c;
+	ll d = (a/c)*c+c, e = (b/c)*c;
+	auto dist = [&](ll x, ll y) {
+		return (y-x+1)/2;
+	};
+	if(d > b) {
+		cout << dist(a, b);
+		return;
+	}
+	cout << dist(a, d-1) + dist(e+1, b) + dist(1, c+1)*((e-d)/c) + 1;
+}
+```
+
+还是要细心去找规律啊，感觉是想复杂了，想着肯定是用什么高级算法之类的东西才能去解这个题，也算是总结经验了，蓝桥更看重考一点数学和规律的感觉，从一般到共性吧
