--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -1218,6 +1218,77 @@ public:
 
 
 
+##  1456.定长子串中元音的最大数目(定长滑动窗口)
+
+```cpp
+class Solution {
+public:
+    int maxVowels(string s, int k) {
+        int cnt = 0, ans = 0;
+        auto check = [&](char c) {
+            return c == 'a' || c == 'e' || c == 'i' || c == 'o' || c == 'u';
+        };
+        for(int i = 0; i < s.size(); i++) {
+            cnt += check(s[i]);
+            if(i < k-1) continue;
+            ans = max(ans, cnt);
+            cnt -= check(s[i-k+1]);
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func maxVowels(s string, k int) int {
+    ans, cnt := 0, 0
+    var check func(c byte) int
+    check = func(c byte) int {
+        if c == 'a' || c == 'e' || c == 'i' || c == 'o' || c == 'u' {
+            return 1
+        }
+        return 0
+    }
+    for i, c := range s {
+        cnt += check(byte(c))
+        if i < k-1 {
+            continue
+        }
+        ans = max(ans, cnt)
+        cnt -= check(byte(s[i-k+1]))
+    }
+    return ans
+}
+```
+
+
+
+
+
+##  子数组最大平均数(定长滑动窗口)
+
+```cpp
+class Solution {
+public:
+    double findMaxAverage(vector<int>& nums, int k) {
+        double ans = INT_MIN, tmp = 0;
+        for(int i = 0; i < nums.size(); i++) {
+            tmp += nums[i];
+            if(i < k-1) continue;
+            ans = max(ans, tmp/k);
+            tmp -= nums[i-k+1];
+        }
+        return ans;
+    }
+};
+```
+
+
+
+
+
 
 
 
@@ -1277,7 +1348,7 @@ int solve(string answerKey) {
 
 
 
-**已知窗口大小**---步骤分为入、出、记录数据
+**已知窗口大小**---步骤分为入、出、更新数据
 
 ```cpp
 vector<int> maxSlidingWindow(vector<int>& nums, int k) {
@@ -1298,6 +1369,8 @@ vector<int> maxSlidingWindow(vector<int>& nums, int k) {
     return res;
 }
 ```
+
+三个步骤：入、更新数据、出。几乎适用于所有定长滑动窗口的题目，当然，顺序不同代码逻辑就会有少许差异，总的来说这三个步骤一定是不能少的。一定是入、更新答案、出！
 
 
 
