--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -1267,7 +1267,7 @@ func maxVowels(s string, k int) int {
 
 
 
-##  子数组最大平均数(定长滑动窗口)
+##  643.子数组最大平均数(定长滑动窗口)
 
 ```cpp
 class Solution {
@@ -1286,6 +1286,117 @@ public:
 ```
 
 
+
+
+
+##  1343.大小为k且平均值大于等于阈值的子数组数目(定长滑动窗口)
+
+```cpp
+class Solution {
+public:
+    int numOfSubarrays(vector<int>& arr, int k, int threshold) {
+        double sum = 0;
+        int cnt = 0;
+        for(int i = 0; i < arr.size(); i++) {
+            sum += arr[i];
+            if(i < k-1) continue;
+            cnt += sum/k >= threshold;
+            sum -= arr[i-k+1];
+        }
+        return cnt;
+    }
+};
+```
+
+
+
+```go
+func numOfSubarrays(arr []int, k int, threshold int) int {
+    ans, sum := 0, 0
+    for i, x := range arr {
+        sum += x
+        if i < k-1 {
+            continue
+        }
+
+        if sum/k >= threshold {
+            ans++
+        }
+        sum -= arr[i-k+1]
+    }
+    return ans
+}
+```
+
+
+
+
+
+##  2090.半径为k的子数组平均值(定长滑动窗口)
+
+```cpp
+class Solution {
+public:
+    vector<int> getAverages(vector<int>& nums, int k) {
+        vector<int> ans(nums.size(), -1);
+        long long sum = 0;
+        if(k == 0) return nums;
+        for(int i = 0; i < nums.size(); i++) {
+            sum += nums[i];
+            if(i < 2*k) continue;
+            //cout << sum << " ";
+            ans[i-k] = sum/(2*k+1);
+            sum -= nums[i-2*k];
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func getAverages(nums []int, k int) []int {
+    ans := make([]int, len(nums))
+    sum := 0
+    for i, x := range nums {
+        if i < k || i+k >= len(nums) {
+            ans[i] = -1
+        }
+        sum += x
+        if i >= 2*k {
+            ans[i-k] = sum/(2*k+1)
+            sum -= nums[i-2*k]
+        }
+    }
+    return ans
+}
+```
+
+第一直觉其实是想的是前缀和来写这道题，但是由于知道这是一个滑动窗口的题所以还是用滑动窗口来写了，但是仔细来看，其实这何尝不是一个前缀和的题呢？这一题和前面几道题有一点点的区别，主要是体现在下标处，搞清楚对应的下标，这一题就很好写了
+
+
+
+##  2379.得到k个黑块的最少涂色次数(定长滑动窗口)
+
+```cpp
+class Solution {
+public:
+    int minimumRecolors(string blocks, int k) {
+        int cnt[2]{}, ans = 101;
+        for(int i = 0; i < blocks.size(); i++) {
+            cnt[blocks[i]&1]++;
+            if(i < k-1) continue;
+            ans = min(ans, cnt[1]);
+            cnt[blocks[i-k+1]&1]--;
+        }
+        //cout << (int)'W' << " " << (int)'B'; //偶是B
+        return ans;
+    }
+};
+```
+
+知道方法和模板做题就是要快啊！感觉要是以前的话真不一定想得到这个是滑动窗口类型的题目了，这里也是一次性写出了我认为最简单的写法了，cnt数组用来分别计数W和B，发现这个W和B的ascii值奇偶性不同，就用了这个简便的写法。
 
 
 
