--- a/9月刷题笔记.md
+++ b/9月刷题笔记.md
@@ -1400,6 +1400,222 @@ public:
 
 
 
+##  2576.求出最多标记下标(二分答案、双指针)
+
+二分答案：
+
+```cpp
+class Solution {
+public:
+    int maxNumOfMarkedIndices(vector<int>& nums) {
+        sort(nums.begin(), nums.end());
+        int n = nums.size();
+        
+        //主要是弄清楚它是哪两个数进行比较判断的 不能是第一个和最后一个数比较 如果最小的数被最大的数取走了那么就不能符合题意了，其实有一点贪心的感觉
+        auto check = [&](int k) {
+            for(int i = 0; i < k; i++) {
+                if(nums[i]*2 > nums[n-k+i]) return false;
+            }
+            return true;
+        };
+
+        //开区间写法
+        int left = 0, right = n/2+1;    //left写成-1也行，主要是这一题k能等于0，所以初始化成了0，常理开区间的话应该初始化成-1
+        while(left+1 < right) {
+            int mid = (left+right)/2;
+            (check(mid) ? left : right) = mid;
+        }
+        return left*2;
+    }
+};
+```
+
+
+
+双指针
+
+```cpp
+class Solution {
+public:
+    int maxNumOfMarkedIndices(vector<int>& nums) {
+        sort(nums.begin(), nums.end());
+        int i = 0, n = nums.size();
+        for(int j = (n+1)/2; j < n; j++) {
+            if(nums[i]*2 <= nums[j]) i++;
+        }
+        return i*2;
+    }
+};
+```
+
+
+
+```go
+func maxNumOfMarkedIndices(nums []int) int {
+    sort.Ints(nums)
+    i, n := 0, len(nums)
+    for j := (n+1)/2; j < n; j++ {
+        if nums[i]*2 <= nums[j] {
+            i++
+        }
+    }
+    return 2*i
+}
+```
+
+双指针的主要思想其实和二分答案是一样的，关键是要弄懂是和哪两个数进行比较。通过这一题也是了解了二分答案是个什么意思了，在判断二分答案方法的时候有一种思路，见下面总结归纳
+
+
+
+##  1652.拆炸弹(定长滑动窗口)
+
+```cpp
+class Solution {
+public:
+    vector<int> decrypt(vector<int>& code, int k) {
+        int n = code.size();
+        vector<int> ans(n);
+        int r = k > 0 ? k+1 : n;
+        k = abs(k);
+        int sum = reduce(code.begin()+r-k, code.begin()+r);
+        for(int i = 0; i < code.size(); i++) {
+            ans[i] = sum;
+            sum += code[r%n]-code[(r-k)%n];
+            r++;
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func decrypt(code []int, k int) []int {
+    n := len(code)
+    ans := make([]int, n)
+    r := k+1
+    if k < 0 {
+        r = n
+        k = -k
+    }
+
+    sum := 0
+    for _, x := range code[r-k:r] {
+        sum += x
+    }
+
+    for i := range code {
+        ans[i] = sum
+        sum += code[r%n]-code[(r-k)%n]
+        r++
+    }
+    return ans
+}
+```
+
+这一题竟然是简单题？？？我丢，我想的方法要分三种情况，然后每种情况一个for循环，我寻思着这也太麻烦了把，所以还是来看题解了。确实还是个定长滑动窗口，但是我感觉不是很明显，主要是题解很灵性的将k大于0和k小于0的情况都放在一起了，无论是哪种k的情况，其实滑动窗口都是往右移动的，只不过就是滑动窗口的起始位置不同而已。修改左右边界`sum += code[r%n]-code[(r-k)%n];`刚开始还看不懂是为什么，直到最后弄明白了这个r到底是什么意思，这个r是用来维护滑动窗口的右边界的，那么其左边界的下标就是[r-k]了，还有非常重要的一点是这个滑动窗口的区间是一个左闭右开的，这一题我感觉要是这个区间没搞明白的话也很难弄清楚这个下标之间的关系的，很容易导致下标越界之类的错误
+
+
+
+##  1052.爱生气的书店老板(定长滑动窗口)
+
+```cpp
+class Solution {
+public:
+    int maxSatisfied(vector<int>& customers, vector<int>& grumpy, int minutes) {
+        int cnt[2]{}, max1 = 0;
+        for(int i = 0; i < customers.size(); i++) {
+            cnt[grumpy[i]] += customers[i];
+            if(i < minutes-1) continue;
+            max1 = max(cnt[1], max1);
+            cnt[1] -= grumpy[i-minutes+1] ? customers[i-minutes+1] : 0;
+        }
+        return cnt[0]+max1;
+    }
+};
+```
+
+
+
+```go
+func maxSatisfied(customers []int, grumpy []int, minutes int) int {
+    cnt := make([]int, 2)
+    max1 := 0
+    for i, x := range customers {
+        cnt[grumpy[i]] += x
+        if i < minutes-1 {
+            continue
+        }
+        max1 = max(max1, cnt[1])
+        if grumpy[i-minutes+1] == 1 {
+            cnt[1] -= customers[i-minutes+1]
+        }
+    }
+    return cnt[0]+max1
+}
+```
+
+新题新题！但是仔细一看呢我觉得和前面做的2379还是有一点像的，对！确实就是一种类型的题目，诶哟当时那个题我也是用cnt[2]数组来做的，其实就是数量上的一点点偏差，这里累加的是customer[i]，前面的题只需要累加1就行了，再就是grumpy数组其实就是对应的2379的奇偶性！其它方面基本上没什么改变，定长滑动窗口内只需要维护cnt[1]的最大值就行了，所以在左侧元素移除滑动窗口的时候只需要对cnt[1]进行操作，二cnt[0]是我们一定要算入在最终答案的
+
+
+
+##  2841.几乎唯一子数组的最大和(滑动窗口)
+
+```cpp
+class Solution {
+public:
+    long long maxSum(vector<int>& nums, int m, int k) {
+        long long ans = 0, sum;
+        unordered_map<int, int> cnt;
+        for(int i = 0; i < nums.size(); i++) {
+            sum += nums[i];
+            cnt[nums[i]]++;
+            if(i < k-1) continue;
+            if(cnt.size() >= m) {
+                ans = max(ans, sum);
+            }
+            int out = nums[i-k+1];
+            sum -= out;
+            if(--cnt[out] == 0) cnt.erase(out);
+        }
+        return ans;
+    }
+};
+```
+
+
+
+```go
+func maxSum(nums []int, m int, k int) (ans int64) {
+    sum := int64(0)
+    cnt := map[int]int{}
+    for _, x := range nums[:k-1] {
+        sum += int64(x)
+        cnt[x]++
+    }
+
+    for i, in := range nums[k-1:] {
+        sum += int64(in)
+        cnt[in]++
+        if len(cnt) >= m {
+            ans = max(ans, sum)
+        }
+        out := nums[i]
+        sum -= int64(out)
+        cnt[out]--
+        if cnt[out] == 0 {
+            delete(cnt, out)
+        }
+    }
+    return
+}
+```
+
+这段代码不是一比一转换过来的，go代码是先循环前k-1个数，然后再对后面的数循环的，cpp代码是直接从头循环到尾。这一题也是差了一点点自己ac了，主要是差在了表达m个不同的数上，题解直接用的`cnt.size()`真的是妙中之妙啊，用了这么多的键、值，原来这里直接用size来表示不同元素的个数，天呐。正是因为这个，在退出元素更新哈希表cnt之后需要对其进行判空操作，如果为空了的话就需要它把这段内存空间删掉，也就是`cnt.erase(out)`，不然`cnt.size()`只会越来越大导致出错
+
+
+
 
 
 
@@ -1490,3 +1706,11 @@ vector<int> maxSlidingWindow(vector<int>& nums, int k) {
 ###  遇事不决先排序
 
 当题中给出某些大小关系才能给出答案的字眼中，并且答案和顺序无关的时候可以先排序看看问题能不能变得简便很多
+
+
+
+
+
+###  二分答案
+
+判断这种方法有一个思路，就是答案具有一定的单调性，拿2576为例，这里的下标数目就是作为答案返回的，它的结果一定是偶数，这里用k来表示标记的下标对，那么最终返回的答案就是2 * k，然后就是对k进行判断，判断其单调性，什么意思呢？假设答案为k对，那么k-1对，k-2对一定是标记过了的，同理k+1对和k+2对一定是没有标记过的，就相当于k左边的都是符合条件的，k右边的都是不符合条件的，这也就是我们最开始用二分查找所对应的意思。所以和二分查找一样，最终的循环不变量也是left。所以二分答案的解题过程就是一个二分模板里面加上一个check函数，这个check函数需要自己来写，具体怎么实现就需要根据题意来写了
